--- a/style.css
+++ b/style.css
@@ -1,4 +1,58 @@
-body {background-color:tan;}
-h1{color:green;}
+body 
+{
+    background-color:#000000;
+    font-family: arial;
+    font-size: 14px;
+    color:#ffffff;
+}
+
+h1
+{   color:grey;
+    font-family: verdana;
+    padding:0px 40px;
+}
+
+.maindiv 
+{
+    background-color:#ffffff;
+    color:#000000;
+    width:500px;
+    padding:20px;
+    border-radius: 25px;
+    margin: 0 auto;
+
+}
+#mainform { margin:auto;}
 
 
+
+.center
+{border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    line-height:4px;
+}
+
+td{
+    padding: 8px;
+    text-align: left;
+}
+
+#result
+{
+    text-align: left;
+    padding:10px 100px;
+}
+
+footer
+{
+    text-align: left;
+    font-size: 15px;
+    font-family:arial;
+        
+}     
+
+.highlight
+{
+    background-color: #ffff00;
+}
